ADD: PostAutor / Documentação swagger
